use external library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,12 @@ find_package(glm REQUIRED)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
+include_directories(
+        external/glfw-3.1.2/include/
+        external/glm-0.9.7.1/
+        external/glew-1.13.0/include/
+)
+
 add_executable(
         playground
         playground.cpp
@@ -22,5 +28,4 @@ add_executable(
 
 target_link_libraries(playground glfw)
 target_link_libraries(playground glew)
-target_link_libraries(playground glm)
 target_link_libraries(playground "-framework OpenGL")
