--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(animation)
 find_package(glfw3 REQUIRED)
 find_package(glew REQUIRED)
 find_package(glm REQUIRED)
+find_package(OpenCV REQUIRED)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
@@ -26,3 +27,8 @@ add_executable(
 target_link_libraries(playground glfw)
 target_link_libraries(playground glew)
 target_link_libraries(playground "-framework OpenGL")
+
+set(USE_AVX_INSTRUCTIONS ON CACHE BOOL "Use AVX instructions")
+add_subdirectory(/Users/zhengxiangyue/Projects/dlib dlib_build)
+add_executable(face_recognation face_recognation.cpp)
+target_link_libraries(face_recognation dlib::dlib ${OpenCV_LIBS})
